added more content and style

--- a/index.html
+++ b/index.html
@@ -9,7 +9,18 @@
 </head>
 
 <body>
-
+    <div class="app">
+        <h1>Simple Quiz</h1>
+        <div class="quiz">
+            <h2 id="question">Question goes here</h2>
+            <div id="ans-btn">
+                <button class="btn">Answer 1</button>
+                <button class="btn">Answer 2</button>
+                <button class="btn">Answer 3</button>
+                <button class="btn">Answer 4</button>
+            </div>
+        </div>
+    </div>
     <!-- SCRIPT -->
     <script src="main.js"></script>
 </body>
