--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quiz App</title>
+    <link rel="icon" href="./logo.png">
     <link rel="stylesheet" href="style.css">
+    <title>Quiz App</title>
 </head>
 
 <body>
